# db-facilities-tmp

./: .gitattributes  .gitignore  00_initialize.sh  01_dataloading.sh  02_build.sh  03_export.sh  03_geocode.sh  04_archive.sh  04_backup.sh  04_build.sh  05_cleanup.sh  05_export.sh  06_backup.sh  Dockerfile  README.md  config.sh  docker-compose.yml  entrypoint.sh  etl.sh  facdb.sh  facdb_qaqc.ipynb  facilities_qaqc.ipynb.REMOVED.git-id  pyproject.toml  run  settings.sh  setup.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.ipynb_checkpoints/: 00_initialize-checkpoint.sh
data/: classification.csv
docs/: CNAME  index.html
etl/: acs_daycareheadstart.py  bic_tradewaste.py  bpl_libraries.py  dca_operatingbusinesses.py  dcas_colp.py  dcla_culturalinstitutions.py  dcp_pops.py  dcp_sfpsd.py  dep_wwtc.py  dfta_contracts.py  doe_busroutesgarages.py  doe_lcgms.py  doe_universalprek.py  dohmh_daycare.py  doitt_buildingcentroids.py  doitt_buildingfootprints.py  doitt_libraries.py  dot_bridgehouses.py  dot_ferryterminals.py  dot_mannedfacilities.py  dot_pedplazas.py  dot_publicparking.py  dpr_parksproperties.py  dsny_mtsgaragemaintenance.py  dycd_afterschoolprograms.py  facilities_classification.py  fbop_corrections.py  fdny_firehouses.py  foodbankny_foodbanks.py  geocode.py  hhc_hospitals.py  hra_centers.py  moeo_socialservicesiteloactions.py  nycdoc_corrections.py  nycha_communitycenters.py  nycha_policeservice.py  nycourts_courts.py  nypl_libraries.py  nysdec_lands.py  nysdec_solidwaste.py  (+20 more)
facdb/: __init__.py  cli.py  (+2 more)
(+319 files in other folders)
