[tool.poetry]
name = "facdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
SQLAlchemy = "^1.4.3"
usaddress = "^0.5.10"
psycopg2-binary = "^2.8.6"
python-geosupport = "^1.0.6"
python-dotenv = "^0.16.0"
typer = "^0.3.2"
tqdm = "^4.59.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
facdb = "facdb.cli:app"
